<resources>
    <string name="app_name">My Application</string>
    <string name="si_formas_parte_de_appwhere_ingrese_el_codigo_de_verificaci_n_o_escanea_el_codigo_qr_para_poder_continuar">Si formas parte de APPWHERE ingrese el codigo de verificación o escanea el codigo QR para poder continuar.</string>
    <string name="codigo_de_verificaci_n">Codigo de verificación</string>
    <string name="confirmar_codigo_de_verificaci_n">Confirmar codigo de verificación</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="correo_de_la_empresa">Correo de la empresa</string>
    <string name="contrase_a">Contraseña</string>
    <string name="appwhere">APPWHERE</string>
    <string name="aplication_everywhere">APLICATION EVERYWHERE</string>
    <string name="gracias_por_registrarse_ahora_para_finalizar_verificaremos_tu_cuenta_por_medio_del_numero_de_celular_o_correo_de_la_empresa_que_ingreso_en_el_registro">Gracias por registrarse ahora para finalizar verificaremos tu cuenta por medio del numero de celular o correo de la empresa que ingreso en el registro.</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="para_continuar_iniciar_sesi_n_o_crear_una_cuenta">Para continuar iniciar sesión o crear una cuenta</string>


    <string name="registrate">REGISTRATE</string>
    <string name="nombre_completo">Nombre completo</string>


    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="numero_de_celular">Numero de celular</string>
    <string name="puesto_que_ocupa_en_la_empresa">Puesto que ocupa en la empresa</string>
    <string name="dia">Dia</string>
    <string name="mes">Mes</string>
    <string name="a_o">Año</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="ingrese_su_numero_de_telefono">Ingrese su numero de telefono</string>
    <string name="telefono">Telefono</string>
    <string name="ingrese_su_correo_electronico">Ingrese su correo electronico</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="espere_un_momento_en_lo_que_llega_el_codigo_de_verificaci_n_en_caso_que_no_lo_reciba_intentelo_de_nuevo">Espere un momento en lo que llega el codigo de verificación en caso que no lo reciba intentelo de nuevo.</string>
    <string name="codigo">Codigo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_mainmenu">Mainmenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
