<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:paddingBottom="32dp"
        android:text="@string/iniciar_sesion"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:drawableEnd="@mipmap/ic_correos"
            android:hint="@string/correo_de_la_empresa"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableRight="@mipmap/ic_correos" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#000">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/contrase_a"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:singleLine="true"
            />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>